Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22682

Loading a session with multiple projects may leave one project unconfigured

XMLWordPrintable

    • Linux/X11, Windows
    • dcb1e8300218411ba0cb591898f7631b123a4b7d 9c39956eab2439d32f3991e1bee5d762e1333cfb

      Steps to reproduce:

      • Have multiple Kits configured
      • Have a session with at least two projects (the first one needs to be a qmake project, the second one a generic project)
      • Make sure both projects are set up properly
      • Close Creator
      • Delete the .creator.user for the first project (I did delete the shadow-build directory too)
      • Open Creator, load the session
      • The "Project Setup" page for the first project appears, but hides after a few seconds
      • The first project is unconfigured now, all build actions are grayed out and the spinner in the Projects side pane spins forever

      It seems others have hit that too:

        For Gerrit Dashboard: QTCREATORBUG-22682
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes