ProjectExplorer: Make sure the target setup page is shown

... when switching to a project that is unconfigured.

Task-number: QTCREATORBUG-22682
Change-Id: I91c6f791677054d2f86a5a5d81003f38ecc812fb
Reviewed-by: André Hartmann <aha_1980@gmx.de>